[!] errors + docs + makefile
