# docs/swagger.json
@@ -182,10 +182,10 @@
         "common.Response": {
             "type": "object",
             "properties": {
-                "message": {
+                "description": {
                     "type": "string"
                 },
-                "status_code": {
+                "internal_code": {
                     "type": "integer"
                 }
             }
@@ -201,10 +201,10 @@
         "model.EmailValidateResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "description": {
                     "type": "string"
                 },
-                "status_code": {
+                "internal_code": {
                     "type": "integer"
                 },
                 "valid": {
@@ -229,20 +229,20 @@
                 "access_token": {
                     "type": "string"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "first_name": {
                     "type": "string"
                 },
+                "internal_code": {
+                    "type": "integer"
+                },
                 "last_name": {
                     "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "status_code": {
-                    "type": "integer"
                 }
             }
         },
@@ -267,10 +267,10 @@
         "model.SignUpResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "description": {
                     "type": "string"
                 },
-                "status_code": {
+                "internal_code": {
                     "type": "integer"
                 }
             }
