# internal/pkg/common/models.go
@@ -5,6 +5,6 @@ type Params struct {
 }
 
 type Response struct {
-	Message    string `json:"message"`
-	StatusCode int    `json:"status_code"`
+	Message      string `json:"description"`
+	InternalCode int    `json:"internal_code"`
 }
